--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <main>
             <div>
                 <p>Escribe tu nombre</p>
-                <input type="text" placeholder="Escribelo aqui">
+                <input type="text" placeholder="Escribelo aqui forpi">
                 <button>Aceptar</button>
             </div>
        </main>
