actualizacion del index

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
        <main>
             <div>
                 <p>Escribe tu nombre</p>
-                <input type="text" placeholder="Escribelo aqui forpi">
-                <button>Aceptar</button>
+                <input class="input-welcome" type="text" placeholder="Escribelo aqui">
+                <button class="button-ok">Aceptar</button>
             </div>
        </main>
         
+       <footer>
+        gracias por todo
+       </footer>
     </body>
 </html>
