Se agrego un archivo JavaScript

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>YOKOSO</title>
         <link rel="icon" href="resourse/favicon.ico">
         <link rel="stylesheet" href="resourse/stryle.css">
+        <script src="resourse/script.js"></script>
     </head>
 
     <body>
@@ -16,8 +17,8 @@
        <main>
             <div>
                 <p>Escribe tu nombre</p>
-                <input class="input-welcome" type="text" placeholder="Escribelo aqui">
-                <button class="button-ok">Aceptar</button>
+                <input id="input-name" class="input-welcome" type="text" placeholder="Escribelo aqui">
+                <button class="button-ok" id="btn-ok">Aceptar</button>
             </div>
        </main>
         
