agregados metodos par hacer mas operaciones matematicas y el archivo html azulejos

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <body>
        <header>
        <!-- a significa anchor(ancla) para hacer enlaces-->
-            <a>Inicio</a>
-            <a>otra pagina</a>
+            <a href="index.html">Inicio</a>
+            <a href="math.html">Matematicas</a>
+            <a href="">Calculador de Azulejos</a>
        </header>
+
+       <div class="imagenes">
+            <img src="resourse/images/Waguri society.jpg" width="350px" alt="">
+ 
+       </div>
 
        <main>
             <div>
@@ -21,9 +27,13 @@
                 <button class="button-ok" id="btn-ok">Aceptar</button>
             </div>
        </main>
-        
+
+       <div class="imagenes2">
+            <img src="resourse/images/Motoguri.jpg" width="250px" alt="">
+       </div> 
+
        <footer>
-        gracias por todo
+        gracias por todo amiguito
        </footer>
     </body>
 </html>
