Se agrego el codigo de azulejos.js, imagenes y retoques finales en html

--- a/math.html
+++ b/math.html
@@ -12,7 +12,7 @@
        <!-- a significa anchor(ancla) para hacer enlaces-->
             <a href="index.html">Inicio</a>
             <a href="math.html">Matematicas</a>
-            <a href="">Calculador de Azulejos</a>
+            <a href="azulejos.html">Calculador de Azulejos</a>
        </header>
 
        <main>
